A tiny working testcase using cmake FetchContent 	modified:   CmakeTest/CLEAN 	modified:   CmakeTest/README 	modified:   CmakeTest/cmaketest/CMakeLists.txt 	new file:   CmakeTest/test.c

--- a/CmakeTest/README
+++ b/CmakeTest/README
@@ -4,7 +4,8 @@ build libdwarf.
 
 To run the test from this directory
 
-  cmake cmaketest
+  cmake ./cmaketest
+  make
 
 The executables etc are built in _deps  
 
