Now with tests on a Mach-O universal binary. 	modified:   ChangeLog 	modified:   DWARFTEST.sh 	new file:   baselines/macuniv.base 	new file:   baselines/macuniv0.base 	new file:   baselines/macuniv1.base
Updated baseline executable
	modified:   dwarfdump-x86_64-ubuntu.O

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,7 +13,7 @@
     commit 1fde85d161fc8208cd9bfae28fdddff55922bf77
 
     Changes in testing for corrupted dwarf
-    meant sligly different error messages.
+    meant slightly different error messages.
     the changes due to issues found by
     clang 14 -fsanitize.
     Now updated.
